--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -210,6 +210,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ApiConfiguration.cs" />
     <Compile Include="Common\ApplicationType.cs" />
     <Compile Include="Common\ExternalSystemType.cs" />
     <Compile Include="Common\MessageCategory.cs" />
