--- a/src/SFA.Apprenticeship.Api.AvService/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- <section name="exceptionHandling" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Configuration.ExceptionHandlingSettings, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" /> -->
+    <!-- <section name="exceptionHandling" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Configuration.ExceptionHandlingSettings, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" /> -->
+    <section name="exceptionHandling" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Configuration.ExceptionHandlingSettings, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+  </configSections>
+
   <system.diagnostics>
     <trace>
       <listeners>
@@ -19,17 +25,35 @@
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
 
+  <exceptionHandling>
+    <exceptionPolicies>
+      <add name="Default Exception Policy">
+        <exceptionTypes>
+          <add name="All Exceptions" type="System.Exception, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" postHandlingAction="ThrowNewException">
+            <exceptionHandlers>
+              <!-- <add name="Logging Exception Handler" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging.LoggingExceptionHandler, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" logCategory="General" eventId="100" severity="Error" title="Enterprise Library Exception Handling" formatterType="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.TextExceptionFormatter, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" priority="0" /> -->
+            </exceptionHandlers>
+          </add>
+        </exceptionTypes>
+      </add>
+    </exceptionPolicies>
+  </exceptionHandling>
+
   <system.serviceModel>
+    <!--
+    <extensions>
+      <behaviorExtensions>
+        <add name="ErrorHandler" type="SFA.Apprenticeship.Api.AvService.ErrorHandlers.CustomErrorHandlerBehavior, SFA.Apprenticeship.Api.AvService" />
+      </behaviorExtensions>
+    </extensions>
+    -->
+
     <!-- TODO: review / remove these settings. -->
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" minFreeMemoryPercentageToActivateService="0" />
 
     <behaviors>
       <serviceBehaviors>
         <behavior name="DefaultServiceBehaviour">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>
-        <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
@@ -45,11 +69,6 @@
     </bindings>
 
     <services>
-      <service name="SFA.Apprenticeship.Api.AvService.ServiceImplementation.Version50.ReferenceDataService" behaviorConfiguration="DefaultServiceBehaviour">
-        <endpoint binding="basicHttpBinding" bindingNamespace="http://Navms.Ms.ExternalInterfaces/2011" contract="SFA.Apprenticeship.Api.AvService.ServiceContracts.Version50.IReferenceData" />
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-      </service>
-
       <service name="SFA.Apprenticeship.Api.AvService.ServiceImplementation.Version51.ReferenceDataService" behaviorConfiguration="DefaultServiceBehaviour">
         <endpoint binding="basicHttpBinding" bindingNamespace="http://services.imservices.org.uk/AVMS/Interfaces/5.1" contract="SFA.Apprenticeship.Api.AvService.ServiceContracts.Version51.IReferenceData" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
