--- a/src/SFA.Apprenticeship.Api.AvService/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
-  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
-  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net452" />
-  <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="6.0.1304.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="5.0.505.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="5.0.505.0" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
@@ -15,5 +16,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net451" />
+  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="5.0.0" targetFramework="net451" />
 </packages>
