WIP VacancyProvider cleanup

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -172,11 +172,10 @@
     <Compile Include="Providers\IProviderProvider.cs" />
     <Compile Include="Providers\IProviderUserProvider.cs" />
     <Compile Include="Providers\IVacancyPostingProvider.cs" />
-    <Compile Include="Providers\IVacancyProvider.cs" />
+    <Compile Include="Providers\IVacancyQAProvider.cs" />
     <Compile Include="Providers\ProviderProvider.cs" />
     <Compile Include="Providers\ProviderUserProvider.cs" />
     <Compile Include="Providers\VacancyPostingProvider.cs" />
-    <Compile Include="Providers\VacancyProvider.cs" />
     <Compile Include="Validators\Common.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidator.cs" />
     <Compile Include="Validators\ProviderUser\VerifyEmailViewModelValidator.cs" />
