Proxy routing for NAS AV API

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -6,7 +6,11 @@
 <configuration>
   <appSettings></appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.5.2">
+      <buildProviders>
+        <remove extension=".svc"/>
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <system.webServer>
