--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -21,6 +21,11 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*" verb="*" type="System.Web.Handlers.TransferRequestHandler"
         preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Arr-Disable-Session-Affinity" value="true"/>
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
