--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -418,12 +418,13 @@
     <Content Include="Content\_assets\img\screenshot-employer-approval.png" />
     <Content Include="Content\_assets\img\screenshot-employer-notification.png" />
     <Content Include="Content\_assets\img\screenshot-idams.png" />
-    <Content Include="Content\_assets\js\frameworks.js" />
-    <Content Include="Content\_assets\js\jobtitles.js" />
+    <Content Include="Content\_assets\js\inplaceediting.js" />
+    <Content Include="Content\_assets\js\interactions.js" />
+    <Content Include="Content\_assets\js\jquery.pwstrength.js" />
+    <Content Include="Content\_assets\js\maps.js" />
     <Content Include="Content\_assets\js\nas\validationscripts.js" />
-    <Content Include="Content\_assets\js\prototype-manage.js" />
-    <Content Include="Content\_assets\js\prototype.js" />
-    <Content Include="Content\_assets\js\scripts.js" />
+    <Content Include="Content\_assets\js\old-browsers.js" />
+    <Content Include="Content\_assets\js\sticky.js" />
     <Content Include="Content\_assets\js\vendor\chosen.jquery.js" />
     <Content Include="Content\_assets\js\vendor\fastclick.js" />
     <Content Include="Content\_assets\js\vendor\goog\webfont-debug.js" />
