API: started upload vacancy API (very WIP).

--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Mappers\ApprenticeshipVacancyQueryMapperTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyMapperTests.cs" />
     <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
+    <Compile Include="Mappers\VacancyUploadRequestMapperTests.cs" />
     <Compile Include="Mappers\WageMapperTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
