--- a/src/SFA.Apprenticeship.Api.AvService/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.config
@@ -67,6 +67,11 @@
         <endpoint binding="basicHttpBinding" bindingNamespace="http://services.imservices.org.uk/AVMS/Interfaces/5.1" contract="SFA.Apprenticeship.Api.AvService.ServiceContracts.Version51.IVacancyDetails" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
+
+      <service name="SFA.Apprenticeship.Api.AvService.ServiceImplementation.Version51.VacancyManagementService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint binding="basicHttpBinding" bindingNamespace="http://services.imservices.org.uk/AVMS/Interfaces/5.1" contract="SFA.Apprenticeship.Api.AvService.ServiceContracts.Version51.IVacancyManagement" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
     </services>
   </system.serviceModel>
 
