--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -4,7 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="AreNonPrimaryRequestsEnabled" value="True"/>
+    <add key="IsLoggingEnabled" value="True"/>
+    <add key="CompatabilityWebServiceRootUrl" value="http://sfa-service-sit.cloudapp.net"/>
+    <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
+    <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
       <buildProviders>
